# helssa-2.0

./: .cz.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHATBOT_DELIVERY_CHECKLIST.md  CHATBOT_IMPLEMENTATION_SUMMARY.md  CHATBOT_QUICKSTART.md  CHATBOT_README.md  Makefile  README.md  docker-compose.dev.yml  pubspec.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  release.yml
.reports/: diag.json  diag.md
analytics/: admin.py  api.py  models.py
analytics/migrations/: 0001_initial.py  0002_event_stats_indexes.py
apps/common/: __init__.py
apps/ops/: apps.py
apps/system/: views.py
certificate/: api.py  models.py
certificate/migrations/: 0001_initial.py
chatbot/: admin.py  api.py  forms.py  models.py  prompt_templates.py  serializers.py  services.py  urls.py  views.py
chatbot/migrations/: 0001_initial.py  (+2 more)
config/: asgi.py  celery.py  urls.py  wsgi.py
core/: logging.py
docs/: DIAG.md  REPO_STRUCTURE.md
doctor_online/: admin.py  api.py  apps.py  models.py
down/: admin.py  api.py  apps.py  models.py
helssa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
perf/: apps.py  metrics.py  tasks.py  views.py
scripts/: bump_version.py  changelog.py  repo_tree_report.py  save_log.py  setup.sh
sub/: admin.py  api.py  models.py
telemedicine/: admin.py  apps.py  models.py  views.py
tests/: test_analytics_models.py  test_health.py  test_perf.py  test_request_id_mw.py
(+52 files in other folders)
